--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@ p {
 }
 .subtext {
     color:hsl(0,0%,20%);
+    text-align: justify;
 }
 .bold {
     font-weight: 620;
@@ -121,14 +122,14 @@ button:active {
 .navcard {
     position: fixed;
     top: 0;
-    right: 0;
-    width: 20%;
-    height: 100%;
-    background-color: hsl(120,100%,20%);
+    
+    width: 100%;
+    height: 10%;
+    
 
     transition: all 0.3s ease-out;
     
-    transform: translateX(100%);
+    
     z-index: 100;
 }
 .navcard.show {
@@ -138,8 +139,14 @@ button:active {
 
 
 .navlist {
-    margin-top: 6rem;
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    background-color: hsl(120, 100%, 20%);
+    margin: 0 auto;
+    width: 100%;
+    opacity: 0.7;
 }
 .navitem {
     list-style: none;
@@ -147,6 +154,9 @@ button:active {
     color: hsl(0,0%,100%);
     font-weight: 500;
     transition: all 0.3s ease-out;
+}
+.navitem:hover {
+    scale: 1.2;
 }
 a {
     text-decoration: none;
@@ -179,6 +189,7 @@ a:hover {
     background-image: url(assets/greentech-head.jpg);
     background-position: center;
     background-size: cover;
+    height: 100vh;
 }
 .p1HeadText {
     display: flex;
@@ -434,7 +445,11 @@ span {
 }
 .textboxhis {
     max-width: 80%;
-    margin-top: 5rem;
+    margin: 5rem auto;
+    
+}
+.textboxhis p {
+    text-align: justify;
 }
 .imgboxhis {
     width: 450px;
