--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,7 +173,7 @@ a:hover {
     color:hsl(120, 100%, 22%);
 }
 #white {
-    color:hsl(120, 80%, 70%);
+    color:hsl(120, 84%, 33%);
     text-shadow: 2px 2px 8px hsl(0,0%,5%);
 }
 .page1Header {
@@ -781,26 +781,77 @@ span {
 }
 
 
-/**/
-.footerGrid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    
-}
-.footerGrid h3 {
-    color: hsl(120, 100%, 20%);
-}
-.gridEach {
-    margin:0 auto;
-}
-
+/*FOOTER START*/
 footer {
-    background-color: hsl(0,0%,90%);
-    padding:3.5rem 0;
+    width: 100%;
+    height: 280px;
+    background-color: green; 
 }
 
-/**/
+.container-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 40px;
+    gap: 25px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.box-text-order1 {
+  color: white;
+}
+
+.box-text-order1 p {
+  font-size: 12px;
+}
+
+.box-text-order1 h1 {
+  font-size: 15px;
+}
+
+footer h2 {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+
+footer p {
+  font-size: 12px;
+  line-height: 1.6;
+  margin: 4px 0;
+  color: #e0e0e0;
+}
+
+.social-icons {
+  color: white;
+  margin-top: 20px;
+}
+
+.title-icons h2 {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.text-icons p {
+  font-size: 12px;
+  color: #ccc;
+  margin-bottom: 15px;
+  max-width: 300px;
+}
+
+.social-icons a {
+  color: white;
+  font-size: 18px;
+  margin-right: 15px;
+  transition: color 0.3s ease;
+  text-decoration: none;
+}
+
+/*FOOTER END*/
+
+
 @media (max-width:1100px) and (min-width: 741px) {
     
 }
