--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,76 +483,52 @@ span {
     transform: translateY(10%);
 }
 
-    /* Benefits */
 
-.benefit {
-    width:85%;
-    margin:3rem auto;
-    padding-top: 2rem;
-}
-.benefit h2 {
-    text-align: center;
-    margin:3rem 0;
-    color: hsl(120, 100%, 20%);
-}
-.benefit p {
-    margin:0.8rem;
-    color: hsl(0,0%,20%);
-    text-align: center;
-}
-.benefit h3 {
-    margin:1.5rem 1rem 1.5rem 1rem;
-    text-align: center;
-    color: hsl(120, 100%, 20%);
+/* BENEFIT START CSS */
+.container-benefit {
+    width: 100%;
+    height: 550px;
+    background-color: green;
+    margin:  80px 0 0 0 ;
 }
 
-.benrow {
+.title-benefit {
+    text-align: center;
+    color: white;
+    padding: 30px;
+}
+
+.title-benefit p {
+    padding: 20px 0 0 0;
+}
+
+.box-card-benefit {
     display: flex;
-    gap:1rem;
+    margin: auto;
+    gap: 60px;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+    text-align: center;
 }
-.bencard {
-    display: grid;
-    grid-template-rows: 1fr 0.5fr 0.8fr;
-    background-color: hsl(0,0%,90%);
-    padding: 1rem;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
+
+.card-items-benefit {
+    width: 18%;
+    height: 290px;
+    background-color: white;
+    border-radius: 15px;
 }
-.benimg {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    align-self: center;
-    justify-self: center;
-    
+
+.card-items-benefit img {
+    width: 40%;
+    padding: 20px 0 0;
+ }
+
+.card-items-benefit h4 {
+    padding: 20px 0;
 }
-.environmental {
-    background-image: url(assets/environmentall.png);
-    background-size: cover;
-    background-position: center;
-}
-.energy {
-    background-image: url(assets/energy.png);
-    background-size: cover;
-    background-position: center;
-}
-.economic {
-    background-image: url(assets/economic.png);
-    background-size: cover;
-    background-position: center;
-}
-.health {
-    background-image: url(assets/QoL.png);
-    background-size: cover;
-    background-position: center;
-}
+/* BENEFIT END CSS */
+
 
 /* Technology */
 
