--- a/styles/news.css
+++ b/styles/news.css
@@ -1,6 +1,16 @@
+.newsMain {
+    display: grid;
+    grid-template-columns: 15% 85%;
+}
+.sidenav {
+    background-color: hsl(120, 100%, 20%);
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+}
 .news {
     margin: 7rem auto;
-    width: 80%;
+    width: 90%;
 }
 .newsContent p {
     margin-bottom: 2rem;
