--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,16 +148,16 @@ button:active {
 .navitem {
     list-style: none;
     padding: 1rem 2rem;
-    color: hsl(0,0%,100%);
+    color: white;
     font-weight: 500;
     transition: all 0.3s ease-out;
 }
 .navitem:hover {
     scale: 1.2;
 }
-a {
+.navlist a {
     text-decoration: none;
-    color: hsl(0,0%,100%);
+    color: white;
     transition: all 0.3s ease-out;
 }
 a:hover {
@@ -496,6 +496,7 @@ span {
 
 
 /* BENEFIT START CSS */
+
 .container-benefit {
     width: 100%;
     height: 550px;
@@ -538,6 +539,21 @@ span {
 .card-items-benefit h4 {
     padding: 20px 0;
 }
+
+.card-items-benefit:nth-child(1) {
+    margin-top: 30px;
+}
+
+.card-items-benefit:nth-child(4) {
+    margin-top: 30px;
+}
+
+.card-items-benefit:hover {
+    transform: scale(1.05); 
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+
+
 /* BENEFIT END CSS */
 
 
