--- a/styles/news.css
+++ b/styles/news.css
@@ -1,16 +1,93 @@
 .newsMain {
-    display: grid;
-    grid-template-columns: 15% 85%;
+    
 }
-.sidenav {
-    background-color: hsl(120, 100%, 20%);
+.navSegmentss {
+    height: 8%;
+    width: 100%;
+    background-color: hsl(120, 40%, 50%);
+
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
+
+    position: fixed;
+    z-index: 10;
+    top: 0;
+
+    border: 5px none hsl(0, 0%, 20%);
+    border-style: none none solid none;
+}
+.nav-left {
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+.nav-strip-btn {
     display: flex;
     flex-direction: column;
-    margin-top: 5rem;
+    gap: 2px;
+
+    justify-content: center;
+}
+.nav-strip {
+    height: 6px;
+    width: 32px;
+    background-color: hsl(0, 0%, 20%);
+}
+.nav-circle {
+    height: 32px;
+    width: 32px;
+    background-color: hsl(0, 0%, 20%);
+    border-radius: 50%;
+}
+
+.nav-middle {
+    background-color: chartreuse;
+}
+.nav-right {
+    background-color: orange;
+}
+
+.sidenav {
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+    padding-top: 7rem;
+
+    position: fixed;
+    height: 100%;
+    width: 13%;
+    top: 0;
+
+    border: 5px none hsl(0, 0%, 20%);
+    border-style: none solid none none;
+}
+.pattern {
+    background-color: hsl(120, 40%, 50%);
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    z-index: -5;
+    top:5rem;
 }
 .news {
-    margin: 7rem auto;
-    width: 90%;
+    margin: 7rem 0rem 3rem 15rem;
+    width: 80%;
+
+    display: flex;
+    flex-direction: column;
+}
+.news-head {
+    height: 500px;
+    width: 100%;
+    background-image: url(assets/test.png);
+    background-position: center;
+    background-size: cover;
+    border-radius: 4px;
+    margin-bottom: 3rem;
 }
 .newsContent p {
     margin-bottom: 2rem;
