--- a/styles/styles.css
+++ b/styles/styles.css
@@ -540,6 +540,11 @@ span {
 
 .card-items-benefit h4 {
     padding: 20px 0;
+    color: hsl(120, 100%, 15%);
+}
+.card-items-benefit p {
+    width: 90%;
+    margin: 0 auto;
 }
 
 .card-items-benefit:nth-child(1) {
@@ -560,226 +565,7 @@ span {
 
 /* Technology */
 
-.teknologi {
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 5rem;
-}
-.teknologi h2 {
-    color: hsl(120, 100%, 20%);
-}
-.techsection {
-    display: grid;
-    
-}
-.sect1 {
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-}
-.sect2 {
-    grid-template-rows: 1fr 1fr 1fr;
-}
-.sect3 {
-    grid-template-rows: 1fr 1fr 1fr;
-}
-.sect4 {
-    grid-template-rows: 1fr 1fr 1fr;
-}
-.sect5 {
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-}
-.sect6 {
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-}
-.titletech {
-    display: flex;
-    flex-direction: column;
-    gap: 0.9rem;
-    margin-bottom: 3rem;
-}
-.titletech h2 {
-    margin-bottom: 1.2rem;
-}
-.techtext {
-    margin-left: 1rem;
-}
-.techtext h3 {
-    color: hsl(120, 100%, 20%);
-    margin-bottom: 0.8rem;
-}
-.techsegment {
-    display: grid;
-    grid-template-columns: 1fr 0.5fr;
-    gap: 4rem;
-}
-.techpic {
-    width: 100%;
-    height: 250px;
-}
-.solarenergy {
-    background-image: url(assets/solarpanel.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.wind {
-    background-image: url(assets/wind.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.hydropower {
-    background-image: url(assets/hydro.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.geothermal {
-    background-image: url(assets/geo.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
 
-.battery {
-    background-image: url(assets/battery.png);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.hydrogen {
-    background-image: url(assets/hydrogen.png);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-
-.waste {
-    background-image: url(assets/waste.jpeg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.compost {
-    background-image: url(assets/compost.png);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-
-.evehicle {
-    background-image: url(assets/vehicle.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.ebike {
-    background-image: url(assets/ebike.png);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-
-.rainwater {
-    background-image: url(assets/rainwater.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.desalination {
-    background-image: url(assets/desalination.JPG);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.solarpurify {
-    background-image: url(assets/solarwater.webp);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-
-.hydroponics {
-    background-image: url(assets/hydroponics.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.irrigation {
-    background-image: url(assets/irrigation.webp);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
-.organic {
-    background-image: url(assets/organic.webp);
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    -ms-border-radius: 16px;
-    -o-border-radius: 16px;
-}
 
 
 /*FOOTER START*/
