--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 }
 body {
     font-family: 'poppins', sans-serif;
-    background: hsl(0,0%,95%);
+    background: hsl(0,0%,100%);
     height: 100%;
 }
 h1 {
@@ -16,16 +16,16 @@ h1 {
     font-size: 4em;
 }
 h2 {
-    font-size: 2em;
+    font-size: 1.7em;
     line-height: 60px;
 }
 p {
     font-size: 1em;
-    line-height: 30px;
-    font-weight: 450;
+    line-height: 28px;
+    font-weight: 420;
 }
 .subtext {
-    color:hsl(0,0%,20%);
+    color:hsl(0,0%,15%);
     text-align: justify;
 }
 .bold {
@@ -565,7 +565,39 @@ span {
 
 /* Technology */
 
-
+.technology {
+    width: 85%;
+    margin: 2rem auto;
+}
+.reenergy {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    background-color: hsl(0,0%,95%);
+    padding: 3rem;
+    border-radius: 16px;
+    margin: 2rem auto;
+    box-shadow: -4px 0  hsl(120,100%,40%);
+}
+.techTextBox {
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+.techTextBox h2 {
+    margin-bottom: 2rem;
+    color: hsl(120, 100%, 20%);
+}
+.techImg1 {
+    width: 300px;
+    height: 300px;
+    background-image: url(assets/reenergy.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
 
 
 /*FOOTER START*/
