--- a/styles/styles.css
+++ b/styles/styles.css
@@ -569,7 +569,7 @@ span {
     width: 85%;
     margin: 2rem auto;
 }
-.reenergy {
+.techSegment {
     display: grid;
     grid-template-columns: 1fr 0.4fr;
     align-items: center;
@@ -594,6 +594,14 @@ span {
     width: 300px;
     height: 300px;
     background-image: url(assets/reenergy.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+.techImg2 {
+    width: 300px;
+    height: 300px;
+    background-image: url(assets/agriculture.png);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
