--- a/styles/styles.css
+++ b/styles/styles.css
@@ -566,7 +566,7 @@ span {
 /* Technology */
 
 .technology {
-    width: 85%;
+    width: 80%;
     margin: 2rem auto;
 }
 .techSegment {
@@ -602,6 +602,22 @@ span {
     width: 300px;
     height: 300px;
     background-image: url(assets/agriculture.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+.techImg3 {
+    width: 300px;
+    height: 300px;
+    background-image: url(assets/recycling.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+.techImg4 {
+    width: 300px;
+    height: 300px;
+    background-image: url(assets/storage.png);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
