--- a/styles/styles.css
+++ b/styles/styles.css
@@ -561,7 +561,7 @@ span {
   }
 
   .card-items-benefit {
-      padding: 15px;
+      padding: 15px 10px;
   }
 
   .card-items-benefit img {
@@ -577,9 +577,9 @@ span {
 
     .title-benefit p {
         font-size: 13px;
-        padding: 0 15px;
+        padding: 0 10px;
         word-spacing: 1px; 
-        letter-spacing: 0.2px; 
+        letter-spacing: 0.1px; 
     }
 
 }
