--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ button:active {
 /* Nav */
 
 .navbutton {
-    position: absolute;
+    position: fixed;
     width: 50px;
     height: 50px;
     background-color: hsl(120, 100%, 20%);
