--- a/styles/styles.css
+++ b/styles/styles.css
@@ -601,7 +601,7 @@ span {
     width: 80%;
     margin: 7rem auto;
 }
-.technology h2 {
+.techh2 {
     color: hsl(120, 100%, 20%);
     text-align: center;
 }
